--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Rosario:400,700&display=swap');
 
-@font-face {
+/* @font-face {
   font-family: 'KaTeX_AMS';
   src: url('fonts/KaTeX_AMS-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_AMS-Regular.woff') format('woff'),
@@ -23,23 +23,23 @@
     url('fonts/KaTeX_Caligraphic-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_Fraktur';
   src: url('fonts/KaTeX_Fraktur-Bold.woff2') format('woff2'),
     url('fonts/KaTeX_Fraktur-Bold.woff') format('woff'),
     url('fonts/KaTeX_Fraktur-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_Fraktur';
   src: url('fonts/KaTeX_Fraktur-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Fraktur-Regular.woff') format('woff'),
     url('fonts/KaTeX_Fraktur-Regular.ttf') format('truetype');
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; 
+} */
 @font-face {
   font-family: 'KaTeX_Main';
   src: url('fonts/KaTeX_Main-Bold.woff2') format('woff2'),
@@ -88,46 +88,46 @@
   font-weight: normal;
   font-style: italic;
 }
-@font-face {
+/* @font-face {
   font-family: 'KaTeX_SansSerif';
   src: url('fonts/KaTeX_SansSerif-Bold.woff2') format('woff2'),
     url('fonts/KaTeX_SansSerif-Bold.woff') format('woff'),
     url('fonts/KaTeX_SansSerif-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_SansSerif';
   src: url('fonts/KaTeX_SansSerif-Italic.woff2') format('woff2'),
     url('fonts/KaTeX_SansSerif-Italic.woff') format('woff'),
     url('fonts/KaTeX_SansSerif-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_SansSerif';
   src: url('fonts/KaTeX_SansSerif-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_SansSerif-Regular.woff') format('woff'),
     url('fonts/KaTeX_SansSerif-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_Script';
   src: url('fonts/KaTeX_Script-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Script-Regular.woff') format('woff'),
     url('fonts/KaTeX_Script-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_Size1';
   src: url('fonts/KaTeX_Size1-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Size1-Regular.woff') format('woff'),
     url('fonts/KaTeX_Size1-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
+} */
 @font-face {
   font-family: 'KaTeX_Size2';
   src: url('fonts/KaTeX_Size2-Regular.woff2') format('woff2'),
@@ -136,30 +136,30 @@
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
+/* @font-face {
   font-family: 'KaTeX_Size3';
   src: url('fonts/KaTeX_Size3-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Size3-Regular.woff') format('woff'),
     url('fonts/KaTeX_Size3-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_Size4';
   src: url('fonts/KaTeX_Size4-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Size4-Regular.woff') format('woff'),
     url('fonts/KaTeX_Size4-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: 'KaTeX_Typewriter';
   src: url('fonts/KaTeX_Typewriter-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Typewriter-Regular.woff') format('woff'),
     url('fonts/KaTeX_Typewriter-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 * {
   margin: 0;
@@ -181,7 +181,6 @@ html {
 
 body {
   line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
 }
 ol,
 ul {
