--- a/src/App.css
+++ b/src/App.css
@@ -136,14 +136,14 @@
   font-weight: normal;
   font-style: normal;
 }
-/* @font-face {
+@font-face {
   font-family: 'KaTeX_Size3';
   src: url('fonts/KaTeX_Size3-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Size3-Regular.woff') format('woff'),
     url('fonts/KaTeX_Size3-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-} */
+}
 /* @font-face {
   font-family: 'KaTeX_Size4';
   src: url('fonts/KaTeX_Size4-Regular.woff2') format('woff2'),
