--- a/src/App.css
+++ b/src/App.css
@@ -120,14 +120,14 @@
   font-weight: normal;
   font-style: normal;
 } */
-/* @font-face {
+@font-face {
   font-family: 'KaTeX_Size1';
   src: url('fonts/KaTeX_Size1-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Size1-Regular.woff') format('woff'),
     url('fonts/KaTeX_Size1-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-} */
+}
 @font-face {
   font-family: 'KaTeX_Size2';
   src: url('fonts/KaTeX_Size2-Regular.woff2') format('woff2'),
