--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Rosario:400,700&display=swap');
 
-/* @font-face {
+@font-face {
   font-family: 'KaTeX_AMS';
   src: url('fonts/KaTeX_AMS-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_AMS-Regular.woff') format('woff'),
@@ -23,7 +23,7 @@
     url('fonts/KaTeX_Caligraphic-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-} */
+}
 /* @font-face {
   font-family: 'KaTeX_Fraktur';
   src: url('fonts/KaTeX_Fraktur-Bold.woff2') format('woff2'),
@@ -88,38 +88,38 @@
   font-weight: normal;
   font-style: italic;
 }
-/* @font-face {
+@font-face {
   font-family: 'KaTeX_SansSerif';
   src: url('fonts/KaTeX_SansSerif-Bold.woff2') format('woff2'),
     url('fonts/KaTeX_SansSerif-Bold.woff') format('woff'),
     url('fonts/KaTeX_SansSerif-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
-} */
-/* @font-face {
+}
+@font-face {
   font-family: 'KaTeX_SansSerif';
   src: url('fonts/KaTeX_SansSerif-Italic.woff2') format('woff2'),
     url('fonts/KaTeX_SansSerif-Italic.woff') format('woff'),
     url('fonts/KaTeX_SansSerif-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
-} */
-/* @font-face {
+}
+@font-face {
   font-family: 'KaTeX_SansSerif';
   src: url('fonts/KaTeX_SansSerif-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_SansSerif-Regular.woff') format('woff'),
     url('fonts/KaTeX_SansSerif-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-} */
-/* @font-face {
+}
+@font-face {
   font-family: 'KaTeX_Script';
   src: url('fonts/KaTeX_Script-Regular.woff2') format('woff2'),
     url('fonts/KaTeX_Script-Regular.woff') format('woff'),
     url('fonts/KaTeX_Script-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-} */
+}
 @font-face {
   font-family: 'KaTeX_Size1';
   src: url('fonts/KaTeX_Size1-Regular.woff2') format('woff2'),
