--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,60 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Rosario:400,700&display=swap');
 
 body {
-  font-size: 16px;
+    font-size: 16px;
 }
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
 }
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 /* make border-box defualt for all elements: */
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  line-height: 1.5;
+    line-height: 1.5;
 }
 ol,
 ul {
-  list-style: none;
+    list-style: none;
 }
 blockquote,
 q {
-  quotes: none;
+    quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none;
+    content: '';
+    content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin: 1.25em 0 0.25em;
-}
+    margin: 1.25rem;
+} */
 
 .App {
-  text-align: center;
-  margin: 0;
-  padding: 0;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
