--- a/src/Courses/course.css
+++ b/src/Courses/course.css
@@ -1,26 +1,26 @@
 @font-face {
-  font-family: 'KaTeX_AMS';
-  src: url('../fonts/KaTeX_AMS-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_AMS-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_AMS-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_AMS';
+    src: url('../fonts/KaTeX_AMS-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_AMS-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_AMS-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Caligraphic';
-  src: url('../fonts/KaTeX_Caligraphic-Bold.woff2') format('woff2'),
-    url('../fonts/KaTeX_Caligraphic-Bold.woff') format('woff'),
-    url('../fonts/KaTeX_Caligraphic-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
+    font-family: 'KaTeX_Caligraphic';
+    src: url('../fonts/KaTeX_Caligraphic-Bold.woff2') format('woff2'),
+        url('../fonts/KaTeX_Caligraphic-Bold.woff') format('woff'),
+        url('../fonts/KaTeX_Caligraphic-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Caligraphic';
-  src: url('../fonts/KaTeX_Caligraphic-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_Caligraphic-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_Caligraphic-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_Caligraphic';
+    src: url('../fonts/KaTeX_Caligraphic-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_Caligraphic-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_Caligraphic-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 /* @font-face {
     font-family: 'KaTeX_Fraktur';
@@ -39,108 +39,108 @@
     font-style: normal; 
   } */
 @font-face {
-  font-family: 'KaTeX_Main';
-  src: url('../fonts/KaTeX_Main-Bold.woff2') format('woff2'),
-    url('../fonts/KaTeX_Main-Bold.woff') format('woff'),
-    url('../fonts/KaTeX_Main-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
+    font-family: 'KaTeX_Main';
+    src: url('../fonts/KaTeX_Main-Bold.woff2') format('woff2'),
+        url('../fonts/KaTeX_Main-Bold.woff') format('woff'),
+        url('../fonts/KaTeX_Main-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Main';
-  src: url('../fonts/KaTeX_Main-BoldItalic.woff2') format('woff2'),
-    url('../fonts/KaTeX_Main-BoldItalic.woff') format('woff'),
-    url('../fonts/KaTeX_Main-BoldItalic.ttf') format('truetype');
-  font-weight: bold;
-  font-style: italic;
+    font-family: 'KaTeX_Main';
+    src: url('../fonts/KaTeX_Main-BoldItalic.woff2') format('woff2'),
+        url('../fonts/KaTeX_Main-BoldItalic.woff') format('woff'),
+        url('../fonts/KaTeX_Main-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
 }
 @font-face {
-  font-family: 'KaTeX_Main';
-  src: url('../fonts/KaTeX_Main-Italic.woff2') format('woff2'),
-    url('../fonts/KaTeX_Main-Italic.woff') format('woff'),
-    url('../fonts/KaTeX_Main-Italic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
+    font-family: 'KaTeX_Main';
+    src: url('../fonts/KaTeX_Main-Italic.woff2') format('woff2'),
+        url('../fonts/KaTeX_Main-Italic.woff') format('woff'),
+        url('../fonts/KaTeX_Main-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
 }
 @font-face {
-  font-family: 'KaTeX_Main';
-  src: url('../fonts/KaTeX_Main-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_Main-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_Main-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_Main';
+    src: url('../fonts/KaTeX_Main-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_Main-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_Main-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Math';
-  src: url('../fonts/KaTeX_Math-BoldItalic.woff2') format('woff2'),
-    url('../fonts/KaTeX_Math-BoldItalic.woff') format('woff'),
-    url('../fonts/KaTeX_Math-BoldItalic.ttf') format('truetype');
-  font-weight: bold;
-  font-style: italic;
+    font-family: 'KaTeX_Math';
+    src: url('../fonts/KaTeX_Math-BoldItalic.woff2') format('woff2'),
+        url('../fonts/KaTeX_Math-BoldItalic.woff') format('woff'),
+        url('../fonts/KaTeX_Math-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
 }
 @font-face {
-  font-family: 'KaTeX_Math';
-  src: url('../fonts/KaTeX_Math-Italic.woff2') format('woff2'),
-    url('../fonts/KaTeX_Math-Italic.woff') format('woff'),
-    url('../fonts/KaTeX_Math-Italic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
+    font-family: 'KaTeX_Math';
+    src: url('../fonts/KaTeX_Math-Italic.woff2') format('woff2'),
+        url('../fonts/KaTeX_Math-Italic.woff') format('woff'),
+        url('../fonts/KaTeX_Math-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
 }
 @font-face {
-  font-family: 'KaTeX_SansSerif';
-  src: url('../fonts/KaTeX_SansSerif-Bold.woff2') format('woff2'),
-    url('../fonts/KaTeX_SansSerif-Bold.woff') format('woff'),
-    url('../fonts/KaTeX_SansSerif-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
+    font-family: 'KaTeX_SansSerif';
+    src: url('../fonts/KaTeX_SansSerif-Bold.woff2') format('woff2'),
+        url('../fonts/KaTeX_SansSerif-Bold.woff') format('woff'),
+        url('../fonts/KaTeX_SansSerif-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_SansSerif';
-  src: url('../fonts/KaTeX_SansSerif-Italic.woff2') format('woff2'),
-    url('../fonts/KaTeX_SansSerif-Italic.woff') format('woff'),
-    url('../fonts/KaTeX_SansSerif-Italic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
+    font-family: 'KaTeX_SansSerif';
+    src: url('../fonts/KaTeX_SansSerif-Italic.woff2') format('woff2'),
+        url('../fonts/KaTeX_SansSerif-Italic.woff') format('woff'),
+        url('../fonts/KaTeX_SansSerif-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
 }
 @font-face {
-  font-family: 'KaTeX_SansSerif';
-  src: url('../fonts/KaTeX_SansSerif-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_SansSerif-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_SansSerif-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_SansSerif';
+    src: url('../fonts/KaTeX_SansSerif-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_SansSerif-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_SansSerif-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Script';
-  src: url('../fonts/KaTeX_Script-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_Script-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_Script-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_Script';
+    src: url('../fonts/KaTeX_Script-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_Script-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_Script-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Size1';
-  src: url('../fonts/KaTeX_Size1-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_Size1-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_Size1-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_Size1';
+    src: url('../fonts/KaTeX_Size1-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_Size1-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_Size1-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Size2';
-  src: url('../fonts/KaTeX_Size2-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_Size2-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_Size2-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_Size2';
+    src: url('../fonts/KaTeX_Size2-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_Size2-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_Size2-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'KaTeX_Size3';
-  src: url('../fonts/KaTeX_Size3-Regular.woff2') format('woff2'),
-    url('../fonts/KaTeX_Size3-Regular.woff') format('woff'),
-    url('../fonts/KaTeX_Size3-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'KaTeX_Size3';
+    src: url('../fonts/KaTeX_Size3-Regular.woff2') format('woff2'),
+        url('../fonts/KaTeX_Size3-Regular.woff') format('woff'),
+        url('../fonts/KaTeX_Size3-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 /* @font-face {
     font-family: 'KaTeX_Size4';
@@ -161,7 +161,7 @@
 
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on November 4, 2010 06:48:37 PM America/New_York */
 
-@font-face {
+/* @font-face {
   font-family: 'LatinModernRoman10Regular';
   src: url('../fonts/latin-modern-roman/lmroman10-regular-webfont.eot');
   src: local('☺'),
@@ -173,7 +173,7 @@
       format('svg');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 /* @font-face {
     font-family: 'LatinModernRoman10Italic';
